# spectral-metric

./: .flake8  .gitignore  404.html  LICENSE  Makefile  README.md  config.py  estimator.py  index.html  lib.py  main.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  visualize.py
.github/workflows/: docs_cd.yml  pythonci.yml
accuracy/: cnn_train.py  cnn_train_generator.py
api/estimator/: index.html
api/lib/: index.html
docs/: get-started.md  index.md
docs/api/: estimator.md  lib.md
embedding/: Xception_feature.py  autoencoder.py  cnn_autoencoder.py  tsne.py  vgg19_feature.py
experiments/: README.md  config.py  requirements.txt  utils.py  visualize.py
experiments/accuracy/: cnn_train.py  cnn_train_generator.py  model_definition.py
experiments/embedding/: Xception_feature.py  __init__.py  common.py  tsne.py  vgg19_feature.py
get-started/: index.html
notebooks/: clinc_oos.ipynb
search/: search_index.json
spectral_metric/: config.py  estimator.py  handle_datasets.py  lib.py  types.py  visualize.py
spectral_metric/accuracy/: cnn_train.py  cnn_train_generator.py
spectral_metric/embedding/: Xception_feature.py  autoencoder.py  cnn_autoencoder.py  common.py  script.sh  tsne.py  utils.py  vgg19_feature.py
tests/: test_estimator.py
