[tool.poetry]
name = "spectral_metric"
version = "0.2.0"
description = "Implementation of Cumulative Spectral Gradient (CSG), a measure to estimate the complexity of datasets. This works has been presented at CVPR 2019."
authors = ["Dref360 <frederic.branchaud.charron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100